--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -43,9 +43,16 @@
             <PasswordBox Margin="5,0,0,0" Width="100" ></PasswordBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="4" Orientation="Horizontal">
+        <StackPanel Margin="0,5,0,0" Grid.Row="4" Orientation="Horizontal">
             <TextBlock Width="200" VerticalAlignment="Center" Text="Change Password User"></TextBlock>
             <PasswordBox Margin="5,0,0,0" Width="100"  ></PasswordBox>
+        </StackPanel>
+
+        <StackPanel Visibility="Visible" Margin="0,20,0,0" Grid.Row="5" Orientation="Horizontal">
+            <TextBlock Width="200" VerticalAlignment="Center" Text="Select AOU Data Source"></TextBlock>
+            <ComboBox x:Name="AOUDataSourceTypesCombo" SelectionChanged="AOUDataSourceTypeChanged"></ComboBox>
+            <TextBlock x:Name="AOUDataSourceStringText" Margin="25,0,0,0" VerticalAlignment="Center" Text="Select Data Source String"></TextBlock>
+            <TextBox x:Name="AOUDataSourceString" Margin="5,0,0,0" Width="400" LostFocus="AOUDataSourceString_LostFocus"></TextBox>
         </StackPanel>
 
 
